global/ing-gke.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  labels:
    tier: global
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: frontend
          servicePort: 80
